fixed overlapping divs

--- a/ReclaimPrideNYC/src/css/main.css
+++ b/ReclaimPrideNYC/src/css/main.css
@@ -220,6 +220,7 @@ div {
 
   #get_involved {
     margin: 20px;
+    width: 55%;
   }
 
   #social_media {
